# poly

./: .agent.md  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Cranky.toml  Dockerfile.backup-server  Makefile  Plan.md  README.md  TEST_HARNESS.md  WORK_PLAN.md  agents.md  cdp-eval.js  cdp-screenshot.js  clippy.toml  cranky.toml  dylint.toml  last-crate-update-date  opencode.json  opencode.sh  package.json  playwright.config.ts  test-electron-mcp.py
apps/android/: Cargo.toml  Dioxus.toml  README.md  agents.md  cranky.toml
apps/android/src/: main.rs
apps/desktop/: Cargo.toml  Dioxus.toml  README.md  agents.md  cranky.toml
apps/desktop-blitz/: Cargo.toml  Dioxus.toml  README.md  agents.md  cranky.toml
apps/desktop-blitz/src/: main.rs
apps/desktop-devtools/: Cargo.toml  Dioxus.toml  README.md  agents.md  cranky.toml
apps/desktop-devtools/src/: main.rs
apps/desktop-electron/: Cargo.toml  Dioxus.toml  README.md  agents.md  build.sh  cranky.toml
apps/desktop-electron/electron/: main.js  package.json  preload.js
apps/desktop-electron/src/: main.rs  sandbox.rs
apps/desktop-electron/tests/: sandbox_capture_electron.rs
apps/desktop-web/: Cargo.toml  README.md  agents.md
apps/desktop-web/src/: main.rs
apps/desktop/src/: main.rs  sandbox.rs
apps/desktop/tests/: sandbox_capture.rs
apps/ios/: Cargo.toml  Dioxus.toml  README.md  agents.md  cranky.toml
apps/ios/src/: main.rs
apps/poly-host/: Cargo.toml
apps/poly-host/src/: lib.rs  main.rs
apps/web/: Cargo.toml  Dioxus.toml  README.md  agents.md  cranky.toml
apps/web-devtools/: Cargo.toml  agents.md  cranky.toml
apps/web-devtools/src/: main.rs
apps/web/src/: main.rs  sandbox.rs
apps/web/tests/: sandbox_capture_web.rs
clients/client/: Cargo.toml  README.md  agents.md  cranky.toml
clients/client/src/: code_repo.rs  content_policy.rs  context_action.rs  discover.rs  dms_and_groups.rs  events.rs  forum.rs  lib.rs  messaging.rs  moderation.rs  server_admin.rs  settings.rs  social_graph.rs  threads.rs  types.rs  ui_surface.rs  view_descriptor.rs  voice_transport.rs  writable_dms_and_groups.rs  writable_messaging.rs  writable_moderation.rs  writable_server_admin.rs  writable_social_graph.rs
clients/client/tests/: capabilities_matrix.rs  capability_summary.rs  client_ui_surface_parity.rs  forum_capability_parity.rs  integration.rs  terminology.rs
clients/common-forge/: Cargo.toml
clients/common-forge/src/: lib.rs
clients/demo/: Cargo.toml  README.md  agents.md  cranky.toml
clients/demo/assets/: avatar-prompts.md
clients/demo/src/: data.rs  data.rs.bak  flavour.rs  guest.rs  lib.rs  wit_bindings.rs
clients/demo/tests/: back_and_forth.rs  capabilities.rs
clients/discord/: Cargo.toml  README.md  agents.md  cranky.toml
clients/discord/src/: api.rs  backend.rs  build_info.rs  gateway_bridge.rs  guardrails.rs  guest.rs  http.rs  lib.rs  nitro.rs  signup.rs  super_properties.rs  voice.rs  voice_bridge.rs  wit_bindings.rs
clients/discord/tests/: anti_ban.rs  back_and_forth.rs  banner.rs  canary.rs  capabilities.rs  integration.rs  mapping.rs  moderation.rs  super_properties_consistency.rs  version_override.rs  video_smoke.rs  voice_bridge_handshake.rs
clients/forgejo/: Cargo.toml
clients/forgejo/src/: api.rs  channel_ids.rs  code_repo.rs  context_action.rs  dms_and_groups.rs  is_backend.rs  lib.rs  mapping.rs  moderation.rs  settings.rs  signup.rs  social_graph.rs  types.rs  view_descriptor.rs
clients/forgejo/tests/: back_and_forth.rs  integration_test.rs  version_override.rs
clients/github/: Cargo.toml
clients/github/src/: api.rs  forum.rs  impl_code_repo.rs  impl_context_action.rs  impl_dms_and_groups.rs  impl_is_backend.rs  impl_moderation.rs  impl_settings.rs  impl_social_graph.rs  impl_view_descriptor.rs  impl_writable_messaging.rs  lib.rs  mapping.rs  mapping_tests.rs  signup.rs  types.rs
clients/github/tests/: back_and_forth.rs  capabilities.rs  integration_test.rs  moderation.rs  version_override.rs
clients/hackernews/: Cargo.toml
clients/hackernews/src/: api.rs  auth.rs  cache.rs  dms_and_groups.rs  lib.rs  mapping.rs  settings.rs  signup.rs  social_graph.rs  types.rs  view_descriptor.rs
clients/hackernews/tests/: capabilities.rs  integration_test.rs  version_override.rs
clients/matrix/: Cargo.toml  README.md  agents.md  cranky.toml
clients/matrix/src/: api.rs  config.rs  context_action.rs  dms_groups.rs  guest.rs  http.rs  is_backend.rs  lib.rs  messaging.rs  moderation.rs  moderation_log.rs  server_admin.rs  settings.rs  signup.rs  social_graph.rs  view_descriptor.rs  wit_bindings.rs
clients/matrix/tests/: back_and_forth.rs  capabilities.rs  integration.rs  moderation.rs  version_override.rs
clients/reddit/: Cargo.toml
clients/reddit/src/: backend.rs  client.rs  lib.rs  parser.rs  signup.rs
clients/reddit/tests/: back_and_forth.rs  integration_anonymous_read.rs  parser_inbox.rs  parser_post.rs  parser_subreddit.rs  parser_user.rs
clients/server-client/: Cargo.toml  README.md  agents.md
clients/server-client/src/: backend.rs  guest.rs  http.rs  lib.rs  models.rs  signup.rs  wit_bindings.rs  ws.rs
clients/server-client/tests/: banner.rs  integration.rs  overview.rs
clients/stoat/: Cargo.toml  README.md  SPEC.md  agents.md  cranky.toml
clients/stoat/src/: api.rs  config.rs  context_action.rs  dms_and_groups.rs  guest.rs  http.rs  is_backend.rs  lib.rs  messaging.rs  moderation.rs  server_admin.rs  settings.rs  signup.rs  social_graph.rs  video_common.rs  video_transport.rs  video_wasm_capture.rs  video_wasm_playback.rs  view_descriptor.rs  voice.rs  voice_common.rs  voice_noise_filter.rs  voice_transport.rs  voice_wasm.rs  wit_bindings.rs  (+2 more)
clients/teams/: Cargo.toml  README.md  agents.md  cranky.toml
crates/audio-backend/: Cargo.toml
crates/core/: Cargo.toml  README.md  agents.md  build.rs  cranky.toml
crates/host-bridge/: Cargo.toml
crates/host-sandbox/: Cargo.toml
crates/lint-gate/: Cargo.toml  baseline.json  baseline.md  build.rs
crates/lint-gate-rules/: Cargo.toml
crates/plugin-host-tests/: Cargo.toml  README.md  agents.md
(+1406 files in other folders)
