[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/host-bridge",
    "crates/lint-gate",
    "crates/plugin-host",
    "crates/plugin-host-tests",
    "crates/ui-macros",
    "crates/ui-types",
    "clients/client",
    "clients/demo",
    "clients/stoat",
    "clients/matrix",
    "clients/discord",
    "clients/teams",
    "clients/lemmy",
    "clients/hackernews",
    "clients/github",
    "clients/forgejo",
    "clients/server-client",
    "servers/backup-server",
    "servers/server",
    "servers/test-common",
    "servers/test-matrix",
    "servers/test-stoat",
    "servers/test-discord",
    "servers/test-teams",
    "servers/test-poly",
    "servers/test-lemmy",
    "servers/test-hackernews",
    "servers/test-forgejo",
    "servers/test-github",
    "servers/test-runner",
    "mcp/devtools-protocol",
    "mcp/desktop-devtools-mcp",
    "mcp/web-devtools-mcp",
    "mcp/electron-devtools-mcp",
    "mcp/memory-mcp",
    "apps/desktop",
    "apps/desktop-blitz",
    "apps/desktop-electron",     # Electron wrapper (WASM → Electron shell)
    "apps/android",
    "apps/ios",
    "apps/web",
    "apps/desktop-devtools",
    "apps/desktop-web",
    "apps/poly-host",            # Host-bridge daemon for apps/web (serves /host/* on 9333)
    "tools/poly-cli",
    "mcp/chat-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/poly"
rust-version = "1.85"

[workspace.dependencies]
# UI framework
dioxus = { version = "0.7.3", features = ["router"] }
dioxus-cli-config = "0.7.3"

# Database
surrealdb = { version = "3.0.1", default-features = false }
sqlite = "0.37.0"
indexed_db_futures = { version = "0.6.4", features = ["serde"] }

# Async runtime
# Async runtime — strict WASM-compatible subset per tokio's own wasm check:
# only ["rt","macros","sync","time","io-util"] allowed on wasm32
# Native crates add ["rt-multi-thread","fs","io-std","net","process","signal"] themselves
tokio = { version = "1", features = [
    "rt",
    "macros",
    "sync",
    "time",
    "io-util",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
bip39 = "2.2"
sha2 = "0.10"
rand = "0.10"
chacha20poly1305 = "0.10"

# i18n
fluent-bundle = "0.16"
fluent-syntax = "0.12"
unic-langid = "0.9"
sys-locale = "0.3"

# Web / API
# DECISION: Use native-tls instead of default rustls. In reqwest 0.13.2,
# default-tls = rustls + aws-lc-rs. The aws-lc-sys native library causes
# linker conflicts when poly-plugin-host (dylib) and poly-core (rlib) both
# depend on it — cargo absorbs the -l flag into the dylib and doesn't re-emit
# it for the final binary's rlib chain. native-tls (system OpenSSL/SChannel/
# SecureTransport) avoids aws-lc entirely, eliminating the dylib boundary issue.
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "native-tls",
    "charset",
    "http2",
    "system-proxy",
] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Discord — ISC-licensed models shared between poly-discord (client) and
# poly-test-discord (mock server). No AGPL code from Spacebar/Fosscord.
twilight-model = "0.17"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
hex = "0.4"
async-trait = "0.1"
pin-project-lite = "0.2"
subtle = "2"
dashmap = "6"
argon2 = "0.5"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
pulldown-cmark = "0.13"
ammonia = "4"
getrandom = { version = "0.3", features = ["wasm_js"] }
# WASM feature-forcing aliases: these are never imported directly in our code.
# They exist solely so Cargo enables the right JS backend for each getrandom
# semver line that transitive dependencies pull in on wasm32 targets.
# rand_core 0.6 (from aead / chacha20poly1305 / ed25519-dalek) → getrandom 0.2
getrandom02-js = { package = "getrandom", version = "0.2", features = ["js"] }
# rand 0.10 → getrandom 0.4
getrandom04-wasm = { package = "getrandom", version = "0.4", features = [
    "wasm_js",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "History",
    "HtmlElement",
    "Location",
    "Node",
    "PromiseRejectionEvent",
    "Storage",
    "Text",
    "Window",
    "console",
] }
tower = { version = "0.4" }
jsonwebtoken = "9"
urlencoding = "2.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
tempfile = "3"
webkit2gtk = { version = "2.0", features = [] }

# Audio / Noise
# nnnoiseless: pure-Rust port of Mozilla RNNoise for real-time noise cancellation.
# Compiles to wasm32; Phase 3 wires it to a WebAudio AudioWorklet.
# See docs/phase-voice-plan.md DECISION(V-4).
nnnoiseless = "0.5"

# WASM plugin runtime (native-only — wasmtime cannot target wasm32)
wasmtime = { version = "42", features = ["component-model", "cranelift"] }
wasmtime-wasi = "42"

# WASM plugin guest bindings (used by client plugin crates)
wit-bindgen = { version = "0.53", default-features = false, features = [
    "macros",
    "realloc",
] }
cairo-rs = { version = "0.18", features = ["png"] }
wry = "0.53"

# Internal crates
poly-core = { path = "crates/core" }
poly-host-bridge = { path = "crates/host-bridge" }
poly-host = { path = "apps/poly-host" }
poly-plugin-host = { path = "crates/plugin-host" }
poly-client = { path = "clients/client" }
poly-demo = { path = "clients/demo" }
poly-stoat = { path = "clients/stoat" }
poly-matrix = { path = "clients/matrix" }
poly-discord = { path = "clients/discord" }
poly-teams = { path = "clients/teams" }
poly-lemmy = { path = "clients/lemmy" }
poly-hackernews = { path = "clients/hackernews" }
poly-github = { path = "clients/github" }
poly-forgejo = { path = "clients/forgejo" }
poly-backup-server = { path = "servers/backup-server" }
poly-server = { path = "servers/server" }
poly-test-common = { path = "servers/test-common" }
poly-test-forgejo = { path = "servers/test-forgejo" }
poly-test-github = { path = "servers/test-github" }
poly-server-client = { path = "clients/server-client", default-features = false }
poly-desktop-devtools-mcp = { path = "mcp/desktop-devtools-mcp" }
poly-web-devtools-mcp = { path = "mcp/web-devtools-mcp" }
poly-electron-devtools-mcp = { path = "mcp/electron-devtools-mcp" }
poly-devtools-protocol = { path = "mcp/devtools-protocol" }
poly-lint-gate = { path = "crates/lint-gate" }
poly-ui-macros = { path = "crates/ui-macros" }
poly-ui-types = { path = "crates/ui-types" }

# ── Workspace-wide lint policy ───────────────────────────────────────────────
# rust-analyzer, cargo clippy, and cargo cranky all respect these.
# Each crate's Cargo.toml opts in via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
