[package]
name = "poly-desktop-devtools"
description = "Poly desktop app with devtools/inspector enabled for dogfooding"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "poly-desktop-devtools"
path = "src/main.rs"

[dependencies]
poly-ui-macros = { workspace = true }
poly-core = { workspace = true, features = ["demo", "native-nav"] }
dioxus = { workspace = true, features = ["desktop"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "process",
    "signal",
    "io-std",
    "fs",
] }
axum = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
webkit2gtk = { workspace = true }
cairo-rs = { workspace = true }
wry = { workspace = true }

[lints]
workspace = true
