[package]
name = "poly-desktop-electron"
description = "Poly desktop-electron — Dioxus fullstack WASM build wrapped in Electron"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "poly-desktop-electron"
path = "src/main.rs"

[features]
# Default is the client-side profile — matches what `dx build --platform web`
# compiles. The `server` feature is opted in explicitly by `dx serve
# --platform web --fullstack @server --features server` so the native
# server binary pulls the axum + poly-host stack.
default = ["dev-plugins", "web"]
# Mirrors apps/web: opt-in Discord/Teams surfaced under WASM plugins.
# Stripped in production builds via `--no-default-features --features production`.
dev-plugins = ["poly-core/discord", "poly-core/teams"]
production = []
# We DELIBERATELY do NOT enable `dioxus/fullstack` on the client — see
# apps/web/Cargo.toml for the textContent/listening hydration crash
# writeup. Client renders fresh into the empty `#poly-app-shell` from
# the server's App() cfg(not(wasm32)) branch.
web = ["dioxus/web"]
server = ["dioxus/fullstack", "dioxus/server", "dep:axum", "dep:tokio", "dep:poly-host", "dep:dioxus-cli-config", "dep:anyhow", "dep:poly-host-sandbox", "dep:async-trait", "dep:serde", "dep:serde_json", "dep:uuid", "dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
poly-core = { workspace = true, features = [
    "demo",
    "server",
    "stoat",
    "lemmy",
    "hackernews",
    "matrix",
    "github",
    "forgejo",
    "storage-host-bridge",
] }
dioxus = { workspace = true }
tracing = { workspace = true }

# Native-only deps for the fullstack server half.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "macros", "signal", "net"] }
poly-host = { workspace = true, optional = true }
poly-host-sandbox = { workspace = true, optional = true }
dioxus-cli-config = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Dev/test dependencies — only compiled for tests on native targets.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
poly-host-sandbox = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }

# getrandom 0.4 (pulled by rand 0.10 → poly-demo) needs wasm_js on WASM targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom04-wasm = { workspace = true }
web-sys = { workspace = true }
poly-host-bridge = { workspace = true, features = ["web-direct"] }

[lints]
workspace = true
