[package]
name = "poly-desktop"
description = "Poly desktop app — Wry (webview) renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "poly-desktop"
path = "src/main.rs"

[dependencies]
# `github` is enabled on both targets:
# - native build talks to `gh` directly via tokio::process
# - wasm build (run inside the apps/desktop-web Wry shell) calls the
#   localhost /gh subprocess bridge that the shell exposes on port 9223
poly-core = { workspace = true, features = ["demo", "native-nav", "github"] }
tracing = { workspace = true }

# Native (Wry) build
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

# WASM build (used by poly-desktop-web shell via `dx serve --platform web`)
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }
getrandom04-wasm = { workspace = true }

[lints]
workspace = true
