[package]
name = "poly-desktop"
description = "Poly desktop app — Wry (webview) renderer + Dioxus fullstack dev shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "poly-desktop"
path = "src/main.rs"

[features]
# Two compile modes:
# - default (`desktop-native`) — production Wry renderer build.
# - `server` — native axum fullstack server used by `dx serve --platform
#   web --fullstack` in dev. Mounts `/host/*` on port 3002 alongside
#   the WASM bundle so the Wry webview at http://127.0.0.1:3002 has
#   storage on the same origin.
default = ["desktop-native"]
desktop-native = ["dioxus/desktop"]
# `dx serve --platform web` builds apps/desktop as a WASM bundle that the
# Wry webview in apps/desktop-web loads on port 3002. We DELIBERATELY do
# NOT enable `dioxus/fullstack` here — that would activate
# `dioxus-web/hydrate` which produces the
# "Cannot set properties of undefined (setting 'textContent')"
# (and the related "reading 'listening'") crash on boot. The client
# renders fresh into the empty `#poly-app-shell` emitted by the server
# (see App() cfg(not(wasm32)) branch in crates/core/src/ui/mod.rs).
# Apps are shipped as native shells (Wry / Electron / Chromium); we
# never benefited from SSR pre-rendering anyway.
web = ["dioxus/web"]
# Mirrors apps/web: opt-in Discord/Teams surfaced under WASM plugins.
# Stripped in production builds via `--no-default-features --features production`.
dev-plugins = ["poly-core/discord", "poly-core/teams"]
production = []
server = ["dioxus/fullstack", "dioxus/server", "dep:axum", "dep:poly-host", "dep:dioxus-cli-config", "dep:anyhow"]

[dependencies]
# `github` is enabled on both targets:
# - native build talks to `gh` directly via tokio::process
# - wasm build (run inside the apps/desktop-web Wry shell) calls the
#   localhost /gh subprocess bridge that the shell exposes on port 9223
poly-core = { workspace = true, features = [
    "demo",
    "server",
    "stoat",
    "lemmy",
    "hackernews",
    "matrix",
    "github",
    "forgejo",
    "native-nav",
    "storage-host-bridge",
] }
dioxus = { workspace = true }
tracing = { workspace = true }

# Native-side deps. `tokio` is always on for the desktop renderer's async
# pieces; `axum`/`poly-host`/`dioxus-cli-config` only come in under the
# `server` feature.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net"] }
axum = { workspace = true, optional = true }
poly-host = { workspace = true, optional = true }
dioxus-cli-config = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# WASM build (used by poly-desktop-web shell via `dx serve --platform web`)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom04-wasm = { workspace = true }
poly-host-bridge = { workspace = true, features = ["web-direct"] }

[lints]
workspace = true
